# dl-anesthesia

./: .gitignore  LICENSE  README.md  pyproject.toml
db/: x2.npy  x3.npy  y.npy  y5.npy  y51.npy
models/: nn.py  rnn51.py
notebooks/: dataset.ipynb  dnn5.ipynb  rnn5.ipynb  rnn51.ipynb
notebooks/.ipynb_checkpoints/: dataset-checkpoint.ipynb  dnn5-checkpoint.ipynb  dnn51-checkpoint.ipynb
presentation/: deep_learning_crash_course.pptx  show_notes.md
scripts/: create_dataset.py  to_timeseries.py
