[tool.poetry]
name = "dl-anesthesia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
xmltodict = "^0.12.0"
ipython = "^7.19.0"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
